--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
+  text-align: justify;
 }
 
 a {
@@ -443,6 +444,7 @@ section {
 .about .content p:last-child {
   margin-bottom: 0;
 }
+
 /* .img-fluid{
   width: 90%;
 } */
